--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"scripts": {
 		"develop": "next dev",
-		"build": "next build",
+		"build": "bash scripts/copyImagesToPublic.sh && next build",
 		"start": "next start",
 		"type-check": "tsc --noemit"
 	},
