--- a/package.json
+++ b/package.json
@@ -6,25 +6,25 @@
 		"type-check": "tsc --noemit"
 	},
 	"dependencies": {
-		"@tailwindcss/typography": "^0.5.0",
+		"@tailwindcss/typography": "^0.5.10",
 		"@types/node": "17.0.4",
 		"@types/react": "17.0.38",
 		"@types/remark-prism": "^1.3.0",
-		"autoprefixer": "^10.4.0",
-		"clsx": "^1.1.1",
-		"eslint": "8.5.0",
-		"eslint-config-next": "12.0.7",
+		"autoprefixer": "^10.4.16",
+		"clsx": "^2.0.0",
+		"eslint": "^8.51.0",
+		"eslint-config-next": "^13.5.4",
 		"gray-matter": "^4.0.3",
-		"next": "latest",
-		"postcss": "^8.4.5",
-		"prettier": "^2.5.1",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2",
-		"remark": "^14.0.2",
-		"remark-gfm": "^3.0.1",
-		"remark-html": "^15.0.1",
+		"next": "^13.5.4",
+		"postcss": "^8.4.31",
+		"prettier": "^3.0.3",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"remark": "^15.0.1",
+		"remark-gfm": "^4.0.0",
+		"remark-html": "^16.0.1",
 		"remark-prism": "^1.3.6",
-		"tailwindcss": "^3.0.7",
-		"typescript": "4.5.4"
+		"tailwindcss": "^3.3.3",
+		"typescript": "^5.2.2"
 	}
 }
